--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Remover Amizades & Seguidores</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <h2>Login via Cookie do Roblox</h2>
+    <p>⚠️ Pegue seu cookie do Roblox e cole no campo abaixo.</p>
+    
+    <input type="text" id="cookie" placeholder="Cole seu cookie aqui">
+    <button onclick="iniciarRemocao()">Iniciar</button>
+    <button onclick="pararRemocao()">Parar</button>
+    <button onclick="retomarRemocao()">Retomar</button>
+    <button onclick="cancelarRemocao()">Cancelar</button>
+    
+    <div id="status"></div>
 
+    <script src="script.js"></script>
+</body>
+</html>
